--- a/public/index.html
+++ b/public/index.html
@@ -1,53 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>Login Form Tutorial</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chat App</title>
     <style>
-      .login-form {
-        width: 300px;
-        margin: 0 auto;
-        font-family: Tahoma, Geneva, sans-serif;
-      }
-      .login-form h1 {
-        text-align: center;
-        color: #4d4d4d;
-        font-size: 24px;
-        padding: 20px 0 20px 0;
-      }
-      .login-form input[type='password'],
-      .login-form input[type='text'] {
-        width: 100%;
-        padding: 15px;
-        border: 1px solid #dddddd;
-        margin-bottom: 15px;
-        box-sizing: border-box;
-      }
-      .login-form input[type='submit'] {
-        width: 100%;
-        padding: 15px;
-        background-color: #535b63;
-        border: 0;
-        box-sizing: border-box;
-        cursor: pointer;
-        font-weight: bold;
-        color: #ffffff;
+      .chat-container {
+        border: 2px solid;
+        padding: 20px;
+        height: 500px;
+        overflow: scroll;
       }
     </style>
   </head>
   <body>
-    <div class="login-form">
-      <h1>Login Form</h1>
-      <form action="auth" method="POST">
-        <input type="text" name="username" placeholder="Username" required />
-        <input
-          type="password"
-          name="password"
-          placeholder="Password"
-          required
-        />
-        <input type="submit" value="Submit" />
+    <div class="bg-dark text-white p-3 text-center">
+      <h1>Chat App</h1>
+    </div>
+    <div class="container mt-5">
+      <ul id="chat-box" class="list-group chat-container"></ul>
+      <form class="mt-3" id="chat-form">
+        <input type="text" class="form-control" id="messageBox" required />
+        <button type="submit" class="btn btn-success form-control mt-2">
+          Send
+        </button>
       </form>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
